[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/StageRoundLineGraphPanel/StageRoundLineGraphPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/StatsOverviewPanel.gd" type="Script" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/Assets/GoldIcon_20x20.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/Assets/PlayerShield_20x20.png" type="Texture" id=5]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonToggleStandard/PlayerGUI_ButtonToggleStandard.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/TierRelatedStatsPanel/TierRelatedStatsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/Subs/GameEndStatsPanel/GameEndStatsPanel.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="StatsOverviewPanel" type="MarginContainer"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 750, 450 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 750.0
margin_bottom = 450.0
mouse_filter = 2
custom_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 750.0
margin_bottom = 205.0
size_flags_vertical = 10
custom_constants/margin_left = 25

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 25.0
margin_right = 750.0
margin_bottom = 168.0

[node name="GameEndStatsPanel" parent="VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 8 )]
margin_right = 312.0
margin_bottom = 168.0

[node name="TierRelatedStatsPanel" parent="VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 7 )]
visible = false
margin_left = 537.0
margin_right = 725.0
margin_bottom = 168.0
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 235.0
margin_right = 750.0
margin_bottom = 450.0
mouse_filter = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 750.0
margin_bottom = 215.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 340.0
margin_right = 410.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="GraphLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 21.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Header"
align = 1

[node name="GraphIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 70.0
margin_bottom = 21.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 23.0
margin_top = 25.0
margin_right = 727.0
margin_bottom = 215.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 704.0
margin_bottom = 190.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 100.0
margin_bottom = 190.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
custom_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/MarginContainer"]
margin_right = 95.0
margin_bottom = 190.0
mouse_filter = 2
custom_constants/separation = 8

[node name="Stat_HealthButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 95.0
margin_bottom = 31.0
text_for_label = "Health"
custom_button_icon = ExtResource( 5 )
use_texture_defaults = true
can_be_untoggled_if_is_toggled = false

[node name="Stat_GoldButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 39.0
margin_right = 95.0
margin_bottom = 70.0
text_for_label = "Gold"
custom_button_icon = ExtResource( 4 )
use_texture_defaults = true
can_be_untoggled_if_is_toggled = false

[node name="StageRoundLineGraphPanel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_right = 704.0
margin_bottom = 190.0

[connection signal="toggle_mode_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/MarginContainer/VBoxContainer/Stat_HealthButton" to="." method="_on_Stat_HealthButton_toggle_mode_changed"]
[connection signal="toggle_mode_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/MarginContainer/VBoxContainer/Stat_GoldButton" to="." method="_on_Stat_GoldButton_toggle_mode_changed"]
